feat: integrate Swagger for API documentation and enhance security configurations